ping-pong-app/manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: pingpong-app-rollout
  namespace: exercises
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pingpong-app
  strategy:
    canary:
      steps:
        - setWeight: 50
        - analysis:
            templates:
              - templateName: exercises-cpu-rate
  template:
    metadata:
      labels:
        app: pingpong-app
    spec:
      containers:
      - name: ping-pong-app
        image: ghcr.io/pekk4/devopswithkubernetes-ping_pong_app:4.1
        imagePullPolicy: Always
        resources:
          requests:
            memory: "32Mi"
            cpu: "20m"
          limits:
            memory: "64Mi"
            cpu: "50m"
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
